hard-gists/6562886/run.log
=== Docker Run Log for 6562886 ===
Started at: Mi 29. Okt 16:37:41 CET 2025

[2025-10-29 16:37:41] START: Running container for 6562886
[2025-10-29 16:37:41] SUCCESS: Container 79c74b67fd6bbbbfb2657ab29cd8afb77b95d8fa2bfb29fed81da33e2a966c7c started for 6562886
=== Container logs for 6562886 ===
  File "/snippet.py", line 83
    print "Path could not be found!"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6562886 ===
[2025-10-29 16:37:43] INFO: Container 79c74b67fd6bbbbfb2657ab29cd8afb77b95d8fa2bfb29fed81da33e2a966c7c has stopped
